--- a/microservicesapp/package.json
+++ b/microservicesapp/package.json
@@ -4,11 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "moleculer-runner ./services/entry.service.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "moleculer": "^0.14.16"
+    "moleculer": "^0.14.16",
+    "moleculer-web": "^0.10.0",
+    "nats": "^1.4.12"
+  },
+  "devDependencies": {
+    "moleculer-repl": "^0.6.6"
   }
 }
