--- a/microservicesapp/package.json
+++ b/microservicesapp/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.5",
     "moleculer": "^0.14.16",
     "moleculer-web": "^0.10.0",
     "nats": "^1.4.12"
