--- a/microservicesapp/package.json
+++ b/microservicesapp/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
+    "fakerator": "^0.3.3",
+    "ioredis": "^4.27.6",
     "moleculer": "^0.14.16",
+    "moleculer-db": "^0.8.14",
     "moleculer-web": "^0.10.0",
     "nats": "^1.4.12"
   },
